[package]
name = "sshkeys"
version = "0.2.0"
authors = ["Marin Atanasov Nikolov <dnaeon@gmail.com>"]
description = "Rust library for parsing OpenSSH certificates and public keys"
documentation = "https://docs.rs/sshkeys"
repository = "https://github.com/dnaeon/rust-sshkeys"
readme = "README.md"
keywords = ["ssh", "openssh", "parser", "key", "certificate"]
categories = ["cryptography", "parser-implementations", "encoding"]
license-file = "LICENSE"

[dependencies]
base64 = "0.6.0"
byteorder = "1.1.0"
sha2 = "0.6.0"
serde = { version = "1", optional = true }

[dev-dependencies]
serde_test = "1"
