[package]
name = "sshkeys"
version = "0.3.1"
authors = ["Marin Atanasov Nikolov <dnaeon@gmail.com>"]
description = "Rust library for parsing OpenSSH certificates and public keys"
documentation = "https://docs.rs/sshkeys"
repository = "https://github.com/dnaeon/rust-sshkeys"
readme = "README.md"
keywords = ["ssh", "openssh", "parser", "key", "certificate"]
categories = ["cryptography", "parser-implementations", "encoding"]
license-file = "LICENSE"

[dependencies]
base64 = "0.12.1"
byteorder = "1.3.4"
sha2 = "0.8.1"
serde = { version = "1", optional = true }

[dev-dependencies]
serde_test = "1"
